--- a/Areas/Admin/Views/InventoryManagers/TransProduct.cshtml
+++ b/Areas/Admin/Views/InventoryManagers/TransProduct.cshtml
@@ -75,9 +75,10 @@
               contentType: "application/json; charset=utf-8",
               data: JSON.stringify( model ),
               processData: true,
-              cache: false,
-
-
+                      cache: false,
+                  }).done(function(data){
+                     alert("Chuyển hàng thành công");
+                     window.location.replace(data.newUrl);
                   });
                });
 
