--- a/Views/Products/Details.cshtml
+++ b/Views/Products/Details.cshtml
@@ -1835,11 +1835,12 @@
                 contentType: "application/json; charset=utf-8",
                 data: JSON.stringify( model ),
                 processData: true,
-                cache: false,
-                    });
-              });
-
-
+                    cache: false,
+                  }).done(function(data){
+                     alert("Đánh giá thành công");
+                     window.location.replace(data.newUrl);
+                  });
+               });
 
 
         });
