--- a/Views/Products/Details.cshtml
+++ b/Views/Products/Details.cshtml
@@ -1,11 +1,35 @@
 @model WEB2.Models.ProductContent
 @{
     ViewData["Title"] = @Html.DisplayFor(model => model.Product.ProductName);
+    int[] rating = { 0, 0, 0, 0, 0 };
 }
 @section Styles {
 <link href="@Url.Content("/css/views/product/details.css")" rel="stylesheet" type="text/css" />
 <link href="@Url.Content("//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.css")" rel="stylesheet" type="text/css" />
 <link href="@Url.Content("//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick-theme.css")" rel="stylesheet" type="text/css" />
+}
+@foreach (var items in Model.Product.Feedbacks)
+{
+    if (items.Rate == 1)
+    {
+        rating[0] += 1;
+    }
+    else if (items.Rate == 2)
+    {
+        rating[1] += 1;
+    }
+    else if (items.Rate == 3)
+    {
+        rating[2] += 1;
+    }
+    else if (items.Rate == 4)
+    {
+        rating[3] += 1;
+    }
+    else if (items.Rate == 5)
+    {
+        rating[4] += 1;
+    }
 }
 <div class="headerpath pb-2">
     <span>
@@ -1512,22 +1536,81 @@
             </div>
             <div class="commentpannel">
                 <h5>Nhận xét về sản phẩm</h5>
-                @foreach (var item in Model.Product.Feedbacks)
-               {
-                   <div class="m-3 cmt">
-                    <div class="individual mt-4">
-                        <div class="first-character"><span class="first-character1"></span></div>
-                        <div class="fullname"><span class="fullname1">@item.Rank</span></div>
-                        <div class="timeofcmt"><span><i class="bi bi-clock"></i> @item.FeedbackDay</span></div>
+                @if (Model.Product.Feedbacks.Count == 0)
+                {
+                    <div class="mt-4">
+                        <h6 style="text-align: center">Hiện chưa có nhận xét nào</h6>
                     </div>
-                    <div class="contentofcmt">
-                        <p>
-                            @item.Comment
-                        </p>
-                    </div>
-                </div> 
+                }
+                else {
+                    @foreach (var item in Model.Product.Feedbacks)
+                   {
+                       <div class="m-3 cmt">
+                        <div class="individual mt-4">
+                            <div class="first-character"><span class="first-character1"></span></div>
+                            <div class="fullname"><span class="fullname1">@item.Rank</span></div>
+                            <div class="timeofcmt"><span><i class="bi bi-clock"></i> @item.FeedbackDay</span></div>
+                            <div style="vertical-align: 0.1em" class="ml-2">
+                               @if (item.Rate >= 1) {
+                               <svg class="rating-checked bi bi-star-half" xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" viewBox="0 0 16 16">
+                                   <path d="M3.612 15.443c-.386.198-.824-.149-.746-.592l.83-4.73L.173 6.765c-.329-.314-.158-.888.283-.95l4.898-.696L7.538.792c.197-.39.73-.39.927 0l2.184 4.327 4.898.696c.441.062.612.636.282.95l-3.522 3.356.83 4.73c.078.443-.36.79-.746.592L8 13.187l-4.389 2.256z" />
+                               </svg>
+                               }
+                               else {
+                               <svg class="bi bi-star-half" xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" viewBox="0 0 16 16">
+                                   <path d="M3.612 15.443c-.386.198-.824-.149-.746-.592l.83-4.73L.173 6.765c-.329-.314-.158-.888.283-.95l4.898-.696L7.538.792c.197-.39.73-.39.927 0l2.184 4.327 4.898.696c.441.062.612.636.282.95l-3.522 3.356.83 4.73c.078.443-.36.79-.746.592L8 13.187l-4.389 2.256z" />
+                               </svg>
+                               }
+                               @if (item.Rate >= 2) {
+                               <svg class="rating-checked bi bi-star-half" xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" viewBox="0 0 16 16">
+                                   <path d="M3.612 15.443c-.386.198-.824-.149-.746-.592l.83-4.73L.173 6.765c-.329-.314-.158-.888.283-.95l4.898-.696L7.538.792c.197-.39.73-.39.927 0l2.184 4.327 4.898.696c.441.062.612.636.282.95l-3.522 3.356.83 4.73c.078.443-.36.79-.746.592L8 13.187l-4.389 2.256z" />
+                               </svg>
+                               }
+                               else {
+                               <svg class="bi bi-star-half" xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" viewBox="0 0 16 16">
+                                   <path d="M3.612 15.443c-.386.198-.824-.149-.746-.592l.83-4.73L.173 6.765c-.329-.314-.158-.888.283-.95l4.898-.696L7.538.792c.197-.39.73-.39.927 0l2.184 4.327 4.898.696c.441.062.612.636.282.95l-3.522 3.356.83 4.73c.078.443-.36.79-.746.592L8 13.187l-4.389 2.256z" />
+                               </svg>
+                               }
+                               @if (item.Rate >= 3) {
+                               <svg class="rating-checked bi bi-star-half" xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" viewBox="0 0 16 16">
+                                   <path d="M3.612 15.443c-.386.198-.824-.149-.746-.592l.83-4.73L.173 6.765c-.329-.314-.158-.888.283-.95l4.898-.696L7.538.792c.197-.39.73-.39.927 0l2.184 4.327 4.898.696c.441.062.612.636.282.95l-3.522 3.356.83 4.73c.078.443-.36.79-.746.592L8 13.187l-4.389 2.256z" />
+                               </svg>
+                               }
+                               else {
+                               <svg class="bi bi-star-half" xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" viewBox="0 0 16 16">
+                                   <path d="M3.612 15.443c-.386.198-.824-.149-.746-.592l.83-4.73L.173 6.765c-.329-.314-.158-.888.283-.95l4.898-.696L7.538.792c.197-.39.73-.39.927 0l2.184 4.327 4.898.696c.441.062.612.636.282.95l-3.522 3.356.83 4.73c.078.443-.36.79-.746.592L8 13.187l-4.389 2.256z" />
+                               </svg>
+                               }
+                               @if (item.Rate >= 4) {
+                               <svg class="rating-checked bi bi-star-half" xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" viewBox="0 0 16 16">
+                                   <path d="M3.612 15.443c-.386.198-.824-.149-.746-.592l.83-4.73L.173 6.765c-.329-.314-.158-.888.283-.95l4.898-.696L7.538.792c.197-.39.73-.39.927 0l2.184 4.327 4.898.696c.441.062.612.636.282.95l-3.522 3.356.83 4.73c.078.443-.36.79-.746.592L8 13.187l-4.389 2.256z" />
+                               </svg>
+                               }
+                               else {
+                               <svg class="bi bi-star-half" xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" viewBox="0 0 16 16">
+                                   <path d="M3.612 15.443c-.386.198-.824-.149-.746-.592l.83-4.73L.173 6.765c-.329-.314-.158-.888.283-.95l4.898-.696L7.538.792c.197-.39.73-.39.927 0l2.184 4.327 4.898.696c.441.062.612.636.282.95l-3.522 3.356.83 4.73c.078.443-.36.79-.746.592L8 13.187l-4.389 2.256z" />
+                               </svg>
+                               }
+                               @if (item.Rate >= 5) {
+                               <svg class="rating-checked bi bi-star-half" xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" viewBox="0 0 16 16">
+                                   <path d="M3.612 15.443c-.386.198-.824-.149-.746-.592l.83-4.73L.173 6.765c-.329-.314-.158-.888.283-.95l4.898-.696L7.538.792c.197-.39.73-.39.927 0l2.184 4.327 4.898.696c.441.062.612.636.282.95l-3.522 3.356.83 4.73c.078.443-.36.79-.746.592L8 13.187l-4.389 2.256z" />
+                               </svg>
+                               }
+                               else{
+                               <svg class="bi bi-star-half" xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" viewBox="0 0 16 16">
+                                   <path d="M3.612 15.443c-.386.198-.824-.149-.746-.592l.83-4.73L.173 6.765c-.329-.314-.158-.888.283-.95l4.898-.696L7.538.792c.197-.39.73-.39.927 0l2.184 4.327 4.898.696c.441.062.612.636.282.95l-3.522 3.356.83 4.73c.078.443-.36.79-.746.592L8 13.187l-4.389 2.256z" />
+                               </svg>
+                               }
+                            </div>
+                        </div>
+                        <div class="contentofcmt">
+                            <p>
+                                @item.Comment
+                            </p>
+                        </div>
+                    </div> 
+                   }
                }
-               
             </div>
         </div>
         <div class="col-md-4">
@@ -1544,7 +1627,7 @@
                         <div class="baseline">
                             <div id="baseline1"></div>
                         </div>
-                        <span><span id="bsl1">65</span> đánh giá</span>
+                        <span><span id="bsl1">@rating[4]</span> đánh giá</span>
                     </div>
                     <div>
                         <p>
@@ -1556,7 +1639,7 @@
                         <div class="baseline">
                             <div id="baseline2"></div>
                         </div>
-                        <span><span id="bsl2">32</span> đánh giá</span>
+                        <span><span id="bsl2">@rating[3]</span> đánh giá</span>
                     </div>
                     <div>
                         <p>
@@ -1568,7 +1651,7 @@
                         <div class="baseline">
                             <div id="baseline3"></div>
                         </div>
-                        <span><span id="bsl3">10</span> đánh giá</span>
+                        <span><span id="bsl3">@rating[2]</span> đánh giá</span>
                     </div>
                     <div>
                         <p>
@@ -1580,7 +1663,7 @@
                         <div class="baseline">
                             <div id="baseline4"></div>
                         </div>
-                        <span><span id="bsl4">0</span> đánh giá</span>
+                        <span><span id="bsl4">@rating[1]</span> đánh giá</span>
                     </div>
                     <div>
                         <p>
@@ -1593,7 +1676,7 @@
                             <div id="baseline5"></div>
                         </div>
 
-                        <span><span id="bsl5">0</span> đánh giá</span>
+                        <span><span id="bsl5">@rating[0]</span> đánh giá</span>
                     </div>
                 </div>
                 <div class="btndanhgia">
@@ -1810,7 +1893,7 @@
             var cmt;
 
             $('#exampleInputEmail1').change(function(){
-                 name = $(this).val();
+                name = $(this).val();
                 console.log(name);
             });
              $('#exampleInputPassword1').change(function(){
@@ -1838,10 +1921,6 @@
                 cache: false,
                     });
               });
-
-
-
-
         });
 
     </script>
