--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -203,7 +203,7 @@
         </div>
     </div>
     <div class="container">
-        <main role="main" class="py-4">
+        <main role="main" class="py-4 layoutmain">
             @RenderBody()
         </main>
     </div>
