--- a/Areas/Identity/Pages/Account/Manage/ChangePassword.cshtml
+++ b/Areas/Identity/Pages/Account/Manage/ChangePassword.cshtml
@@ -5,11 +5,11 @@
     ViewData["ActivePage"] = ManageNavPages.ChangePassword;
 }
 
-<h4>@ViewData["Title"]</h4>
+
 <partial name="_StatusMessage" for="StatusMessage" />
-<div class="row">
-    <div class="col-md-6">
+<div>
         <form id="change-password-form" method="post">
+            <h4 class="text-gray-800">@ViewData["Title"]</h4>
             <div asp-validation-summary="All" class="text-danger"></div>
             <div class="form-group">
                 <label asp-for="Input.OldPassword"></label>
@@ -26,9 +26,8 @@
                 <input asp-for="Input.ConfirmPassword" class="form-control" />
                 <span asp-validation-for="Input.ConfirmPassword" class="text-danger"></span>
             </div>
-            <button type="submit" class="btn btn-primary">Update password</button>
+            <button type="submit" class="btn btn-primary" id="changepwdbttn">Đổi mật khẩu</button>
         </form>
-    </div>
 </div>
 
 @section Scripts {
