--- a/Areas/Identity/Pages/Account/Manage/EnableAuthenticator.cshtml
+++ b/Areas/Identity/Pages/Account/Manage/EnableAuthenticator.cshtml
@@ -1,45 +1,47 @@
 ﻿@page
 @model EnableAuthenticatorModel
 @{
-    ViewData["Title"] = "Configure authenticator app";
+    ViewData["Title"] = "Ứng dụng xác thực";
     ViewData["ActivePage"] = ManageNavPages.TwoFactorAuthentication;
 }
 
 <partial name="_StatusMessage" for="StatusMessage" />
-<h4>@ViewData["Title"]</h4>
 <div>
-    <p>To use an authenticator app go through the following steps:</p>
+    @*<p>To use an authenticator app go through the following steps:</p>*@
+    <p>Để sử dụng ứng dụng xác thực hai lớp, vui lòng thực hiện các bước sau</p>
     <ol class="list">
         <li>
             <p>
-                Download a two-factor authenticator app like Microsoft Authenticator for
-                <a href="https://go.microsoft.com/fwlink/?Linkid=825072">Android</a> and
-                <a href="https://go.microsoft.com/fwlink/?Linkid=825073">iOS</a> or
-                Google Authenticator for
-                <a href="https://play.google.com/store/apps/details?id=com.google.android.apps.authenticator2&amp;hl=en">Android</a> and
+                @*Download a two-factor authenticator app like Microsoft Authenticator for*@
+                Trên điện thoại, tải về ứng dụng xác thực như Microsoft Authenticator trên nền tảng
+                <a href="https://go.microsoft.com/fwlink/?Linkid=825072">Android</a> và
+                <a href="https://go.microsoft.com/fwlink/?Linkid=825073">iOS</a>
+                Hoặc Google Authenticator trên nền tảng
+                <a href="https://play.google.com/store/apps/details?id=com.google.android.apps.authenticator2&amp;hl=en">Android</a> và
                 <a href="https://itunes.apple.com/us/app/google-authenticator/id388497605?mt=8">iOS</a>.
             </p>
         </li>
         <li>
-            <p>Scan the QR Code or enter this key <kbd>@Model.SharedKey</kbd> into your two factor authenticator app. Spaces and casing do not matter.</p>
-            <div class="alert alert-info">Learn how to <a href="https://go.microsoft.com/fwlink/?Linkid=852423">enable QR code generation</a>.</div>
+            <p>@*Scan the QR Code or enter this key*@Quét mã QR hoặc nhập mã này<kbd>@Model.SharedKey</kbd> trong ứng dụng xác thực.(Khoảng trắng và chữ hoa hoặc thường không quan trọng)</p>
+            <div class="alert alert-info">Xem cách <a href="https://go.microsoft.com/fwlink/?Linkid=852423"> bật tính năng tạo mã QR</a>.</div>
             <div id="qrCode"></div>
             <div id="qrCodeData" data-url="@Html.Raw(@Model.AuthenticatorUri)"></div>
         </li>
         <li>
             <p>
-                Once you have scanned the QR code or input the key above, your two factor authentication app will provide you
-                with a unique code. Enter the code in the confirmation box below.
+                @*Once you have scanned the QR code or input the key above, your two factor authentication app will provide you
+                with a unique code. Enter the code in the confirmation box below.*@
+                Sau khi quét mã QR hoặc nhập mã, ứng dụng xác thực sẽ cung cấp cho bạn với một mã. Nhập mã đó vào ô xác nhận bên dưới.
             </p>
             <div class="row">
                 <div class="col-md-6">
                     <form id="send-code" method="post">
                         <div class="form-group">
-                            <label asp-for="Input.Code" class="control-label">Verification Code</label>
+                            <label asp-for="Input.Code" class="control-label">Mã xác nhận</label>
                             <input asp-for="Input.Code" class="form-control" autocomplete="off" />
                             <span asp-validation-for="Input.Code" class="text-danger"></span>
                         </div>
-                        <button type="submit" class="btn btn-primary">Verify</button>
+                        <button type="submit" class="btn btn-primary">Xác nhận</button>
                         <div asp-validation-summary="ModelOnly" class="text-danger"></div>
                     </form>
                 </div>
