--- a/Areas/Identity/Pages/Account/Manage/ExternalLogins.cshtml
+++ b/Areas/Identity/Pages/Account/Manage/ExternalLogins.cshtml
@@ -1,10 +1,9 @@
 ﻿@page
 @model ExternalLoginsModel
 @{
-    ViewData["Title"] = "Manage your external logins";
+    ViewData["Title"] = "Phương thức đăng nhập";
     ViewData["ActivePage"] = ManageNavPages.ExternalLogins;
 }
-
 <partial name="_StatusMessage" for="StatusMessage" />
 @if (Model.CurrentLogins?.Count > 0)
 {
@@ -38,16 +37,26 @@
 }
 @if (Model.OtherLogins?.Count > 0)
 {
-    <h4>Add another service to log in.</h4>
-    <hr />
+    <h4>Thêm phương thức đăng nhập</h4>
     <form id="link-login-form" asp-page-handler="LinkLogin" method="post" class="form-horizontal">
         <div id="socialLoginList">
-            <p>
+            <div class="exlogin">
                 @foreach (var provider in Model.OtherLogins)
                 {
-                    <button id="@($"link-login-button-{provider.Name}")" type="submit" class="btn btn-primary" name="provider" value="@provider.Name" title="Log in using your @provider.DisplayName account">@provider.DisplayName</button>
+                    if (provider.Name == "Google")
+                    {
+                        <div>
+                            <button id="@($"link-login-button-{provider.Name}")" type="submit" class="btn btn-primary" name="provider" value="@provider.Name" title="Đăng nhập bằng tài khoản @provider.DisplayName"><i class="bi bi-google"></i> @provider.DisplayName</button>
+                        </div>
+                    }
+                    else
+                    {
+                        <div>
+                            <button id="@($"link-login-button-{provider.Name}")" type="submit" class="btn btn-primary" name="provider" value="@provider.Name" title="Đăng nhập bằng tài khoản @provider.DisplayName"><i class="bi bi-facebook"></i> @provider.DisplayName</button>
+                        </div>
+                    }
                 }
-            </p>
+            </div>
         </div>
     </form>
 }
