--- a/Areas/Identity/Pages/Account/Manage/Index.cshtml
+++ b/Areas/Identity/Pages/Account/Manage/Index.cshtml
@@ -1,15 +1,14 @@
 ﻿@page "/Index/"
 @model IndexModel
 @{
-    ViewData["Title"] = "HỒ SƠ";
+    ViewData["Title"] ="Hồ sơ";
     ViewData["ActivePage"] = ManageNavPages.Index;
 }
 
-<h1 class="h3 mb-1 text-gray-800">@ViewData["Title"]</h1>
 <partial name="_StatusMessage" model="Model.StatusMessage" />
-<div class="row">
-    <div class="col-md-6">
+<div class="index_form">
         <form id="profile-form" method="post">
+            <h4 class="h3 text-gray-800">@ViewData["Title"]</h4>
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
                 <label asp-for="Username"></label>
@@ -35,12 +34,9 @@
                 @Html.TextBoxFor(m => m.Input.Birthday, "{0:dd/MM/yyyy}", new { @class = "form-control" })
                 <span asp-validation-for="Input.Birthday" class="text-danger"></span>
             </div>
-
-            <button id="update-profile-button" type="submit" class="btn btn-danger">Lưu hồ sơ</button>
+            <button id="update-profile-button" type="submit" class="btn btn-danger" style="background-color: #be1e2d; border-radius: 30px; ">Lưu hồ sơ</button>
         </form>
-    </div>
 </div>
-
 @section Scripts {
     <partial name="_ValidationScriptsPartial" />
 }
