--- a/Views/Products/ExDetails.cshtml
+++ b/Views/Products/ExDetails.cshtml
@@ -1,12 +1,35 @@
 ﻿@model WEB2.Models.Product
-
 @{
     ViewData["Title"] = @Html.DisplayFor(model => model.ProductName);
+    int[] rating = { 0, 0, 0, 0, 0 };
 }
 @section Styles {
 <link href="@Url.Content("/css/views/product/details.css")" rel="stylesheet" type="text/css" />
 <link href="@Url.Content("//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.css")" rel="stylesheet" type="text/css" />
 <link href="@Url.Content("//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick-theme.css")" rel="stylesheet" type="text/css" />
+}
+@foreach (var items in Model.Feedbacks)
+{
+    if (items.Rate == 1)
+    {
+        rating[0] += 1;
+    }
+    else if (items.Rate == 2)
+    {
+        rating[1] += 1;
+    }
+    else if (items.Rate == 3)
+    {
+        rating[2] += 1;
+    }
+    else if (items.Rate == 4)
+    {
+        rating[3] += 1;
+    }
+    else if (items.Rate == 5)
+    {
+        rating[4] += 1;
+    }
 }
 <div class="headerpath pb-2">
     <span>
@@ -1505,54 +1528,81 @@
         <div class="col-md-8">
             <div class="mt-4 mb-3 commentpannel">
                 <h5>Nhận xét về sản phẩm</h5>
-                <div class="m-3 cmt">
-                      <div class="individual mt-4">
-                          <div class="first-character"><span class="first-character1"></span></div>
-                          <div class="fullname"><span class="fullname1">Mhiba Meo Meo</span></div>
-                          <div class="timeofcmt"><span><i class="bi bi-clock"></i> 25-12-2020 15:31:42</span></div>
-                      </div>
-                      <div class="contentofcmt">
-                        <p>
-                        Sản phẩm mlem mlem
-                      </p>
+                @if (Model.Feedbacks.Count == 0)
+                {
+                    <div class="mt-4">
+                        <h6 style="text-align: center">Hiện chưa có nhận xét nào</h6>
                     </div>
-                </div>
-                     <div class="m-3 cmt">
-                      <div class="individual mt-4">
-                          <div class="first-character"><span class="first-character1"></span></div>
-                          <div class="fullname"><span class="fullname1">Lhiba Meo Meo</span></div>
-                          <div class="timeofcmt"><span><i class="bi bi-clock"></i> 25-12-2020 15:31:42</span></div>
-                      </div>
-                      <div class="contentofcmt">
-                        <p>
-                        Sản phẩm mlem mlem
-                      </p>
-                    </div>
-                </div>
-                <div class="m-3 cmt">
-                      <div class="individual mt-4">
-                          <div class="first-character"><span class="first-character1"></span></div>
-                          <div class="fullname"><span class="fullname1">Qhiba Meo Meo</span></div>
-                          <div class="timeofcmt"><span><i class="bi bi-clock"></i> 25-12-2020 15:31:42</span></div>
-                      </div>
-                      <div class="contentofcmt">
-                        <p>
-                        Sản phẩm mlem mlem
-                      </p>
-                    </div>
-                </div>
-                <div class="m-3 cmt">
-                      <div class="individual mt-4">
-                          <div class="first-character"><span class="first-character1"></span></div>
-                          <div class="fullname"><span class="fullname1">Toan Dang</span></div>
-                          <div class="timeofcmt"><span><i class="bi bi-clock"></i> 25-12-2020 15:31:42</span></div>
-                      </div>
-                      <div class="contentofcmt">
-                        <p>
-                        Sản phẩm vừa miệng :3
-                      </p>
-                    </div>
-                </div>
+                }
+                else {
+                    @foreach (var item in Model.Feedbacks)
+                   {
+                       <div class="m-3 cmt">
+                        <div class="individual mt-4">
+                            <div class="first-character"><span class="first-character1"></span></div>
+                            <div class="fullname"><span class="fullname1">@item.Rank</span></div>
+                            <div class="timeofcmt"><span><i class="bi bi-clock"></i> @item.FeedbackDay</span></div>
+                            <div style="vertical-align: 0.1em" class="ml-2">
+                               @if (item.Rate >= 1) {
+                               <svg class="rating-checked bi bi-star-half" xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" viewBox="0 0 16 16">
+                                   <path d="M3.612 15.443c-.386.198-.824-.149-.746-.592l.83-4.73L.173 6.765c-.329-.314-.158-.888.283-.95l4.898-.696L7.538.792c.197-.39.73-.39.927 0l2.184 4.327 4.898.696c.441.062.612.636.282.95l-3.522 3.356.83 4.73c.078.443-.36.79-.746.592L8 13.187l-4.389 2.256z" />
+                               </svg>
+                               }
+                               else {
+                               <svg class="bi bi-star-half" xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" viewBox="0 0 16 16">
+                                   <path d="M3.612 15.443c-.386.198-.824-.149-.746-.592l.83-4.73L.173 6.765c-.329-.314-.158-.888.283-.95l4.898-.696L7.538.792c.197-.39.73-.39.927 0l2.184 4.327 4.898.696c.441.062.612.636.282.95l-3.522 3.356.83 4.73c.078.443-.36.79-.746.592L8 13.187l-4.389 2.256z" />
+                               </svg>
+                               }
+                               @if (item.Rate >= 2) {
+                               <svg class="rating-checked bi bi-star-half" xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" viewBox="0 0 16 16">
+                                   <path d="M3.612 15.443c-.386.198-.824-.149-.746-.592l.83-4.73L.173 6.765c-.329-.314-.158-.888.283-.95l4.898-.696L7.538.792c.197-.39.73-.39.927 0l2.184 4.327 4.898.696c.441.062.612.636.282.95l-3.522 3.356.83 4.73c.078.443-.36.79-.746.592L8 13.187l-4.389 2.256z" />
+                               </svg>
+                               }
+                               else {
+                               <svg class="bi bi-star-half" xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" viewBox="0 0 16 16">
+                                   <path d="M3.612 15.443c-.386.198-.824-.149-.746-.592l.83-4.73L.173 6.765c-.329-.314-.158-.888.283-.95l4.898-.696L7.538.792c.197-.39.73-.39.927 0l2.184 4.327 4.898.696c.441.062.612.636.282.95l-3.522 3.356.83 4.73c.078.443-.36.79-.746.592L8 13.187l-4.389 2.256z" />
+                               </svg>
+                               }
+                               @if (item.Rate >= 3) {
+                               <svg class="rating-checked bi bi-star-half" xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" viewBox="0 0 16 16">
+                                   <path d="M3.612 15.443c-.386.198-.824-.149-.746-.592l.83-4.73L.173 6.765c-.329-.314-.158-.888.283-.95l4.898-.696L7.538.792c.197-.39.73-.39.927 0l2.184 4.327 4.898.696c.441.062.612.636.282.95l-3.522 3.356.83 4.73c.078.443-.36.79-.746.592L8 13.187l-4.389 2.256z" />
+                               </svg>
+                               }
+                               else {
+                               <svg class="bi bi-star-half" xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" viewBox="0 0 16 16">
+                                   <path d="M3.612 15.443c-.386.198-.824-.149-.746-.592l.83-4.73L.173 6.765c-.329-.314-.158-.888.283-.95l4.898-.696L7.538.792c.197-.39.73-.39.927 0l2.184 4.327 4.898.696c.441.062.612.636.282.95l-3.522 3.356.83 4.73c.078.443-.36.79-.746.592L8 13.187l-4.389 2.256z" />
+                               </svg>
+                               }
+                               @if (item.Rate >= 4) {
+                               <svg class="rating-checked bi bi-star-half" xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" viewBox="0 0 16 16">
+                                   <path d="M3.612 15.443c-.386.198-.824-.149-.746-.592l.83-4.73L.173 6.765c-.329-.314-.158-.888.283-.95l4.898-.696L7.538.792c.197-.39.73-.39.927 0l2.184 4.327 4.898.696c.441.062.612.636.282.95l-3.522 3.356.83 4.73c.078.443-.36.79-.746.592L8 13.187l-4.389 2.256z" />
+                               </svg>
+                               }
+                               else {
+                               <svg class="bi bi-star-half" xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" viewBox="0 0 16 16">
+                                   <path d="M3.612 15.443c-.386.198-.824-.149-.746-.592l.83-4.73L.173 6.765c-.329-.314-.158-.888.283-.95l4.898-.696L7.538.792c.197-.39.73-.39.927 0l2.184 4.327 4.898.696c.441.062.612.636.282.95l-3.522 3.356.83 4.73c.078.443-.36.79-.746.592L8 13.187l-4.389 2.256z" />
+                               </svg>
+                               }
+                               @if (item.Rate >= 5) {
+                               <svg class="rating-checked bi bi-star-half" xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" viewBox="0 0 16 16">
+                                   <path d="M3.612 15.443c-.386.198-.824-.149-.746-.592l.83-4.73L.173 6.765c-.329-.314-.158-.888.283-.95l4.898-.696L7.538.792c.197-.39.73-.39.927 0l2.184 4.327 4.898.696c.441.062.612.636.282.95l-3.522 3.356.83 4.73c.078.443-.36.79-.746.592L8 13.187l-4.389 2.256z" />
+                               </svg>
+                               }
+                               else{
+                               <svg class="bi bi-star-half" xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" viewBox="0 0 16 16">
+                                   <path d="M3.612 15.443c-.386.198-.824-.149-.746-.592l.83-4.73L.173 6.765c-.329-.314-.158-.888.283-.95l4.898-.696L7.538.792c.197-.39.73-.39.927 0l2.184 4.327 4.898.696c.441.062.612.636.282.95l-3.522 3.356.83 4.73c.078.443-.36.79-.746.592L8 13.187l-4.389 2.256z" />
+                               </svg>
+                               }
+                            </div>
+                        </div>
+                        <div class="contentofcmt">
+                            <p>
+                                @item.Comment
+                            </p>
+                        </div>
+                    </div> 
+                   }
+               }
             </div>
         </div>
         <div class="col-md-4">
@@ -1567,7 +1617,7 @@
                            <div class="baseline">
                                <div id="baseline1"></div>
                            </div>
-                           <span><span id="bsl1">65</span> đánh giá</span>
+                           <span><span id="bsl1">@rating[4]</span> đánh giá</span>
                        </div>
                        <div><p>4
                                <svg class="rating-checked bi bi-star-half" xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" viewBox="0 0 16 16">
@@ -1577,7 +1627,7 @@
                            <div class="baseline">
                                <div id="baseline2"></div>
                            </div>
-                           <span><span id="bsl2">32</span> đánh giá</span>
+                           <span><span id="bsl2">@rating[3]</span> đánh giá</span>
                        </div>
                        <div><p>3
                                <svg class="rating-checked bi bi-star-half" xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" viewBox="0 0 16 16">
@@ -1587,7 +1637,7 @@
                            <div class="baseline">
                                <div id="baseline3"></div>
                            </div>
-                           <span><span id="bsl3">10</span> đánh giá</span>
+                           <span><span id="bsl3">@rating[2]</span> đánh giá</span>
                        </div>
                        <div><p>2
                                <svg class="rating-checked bi bi-star-half" xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" viewBox="0 0 16 16">
@@ -1597,7 +1647,7 @@
                            <div class="baseline">
                                <div id="baseline4"></div>
                            </div>
-                           <span><span id="bsl4">0</span> đánh giá</span>
+                           <span><span id="bsl4">@rating[1]</span> đánh giá</span>
                        </div>
                        <div><p>1
                                <svg class="rating-checked bi bi-star-half" xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" viewBox="0 0 16 16">
@@ -1608,7 +1658,7 @@
                                <div id="baseline5"></div>
                            </div>
 
-                           <span><span id="bsl5">0</span> đánh giá</span>
+                           <span><span id="bsl5">@rating[0]</span> đánh giá</span>
                        </div>
                    </div>
             <div class="btndanhgia">
@@ -1686,7 +1736,7 @@
                         </div>
                       </div>
                       <div class="modal-footer">
-                        <button type="button" class="btn" style="width: 100%; border-radius: 10px; ">Gửi đánh giá</button>
+                        <button type="button" id="sub" class="btn" style="width: 100%; border-radius: 10px; ">Gửi đánh giá</button>
                       </div>
                     </div>
                   </div>
@@ -1699,7 +1749,7 @@
     <script type="text/javascript" src="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"></script>
     <script>
         $(document).ready(function () {
-
+            var rate;
             
             $('.slider-for').slick({
               infinite: true,
@@ -1795,24 +1845,60 @@
 
             $("#first-star").on("click", function(){
                 $("#rating-results").html("5");
+                rate = 5;
             })
             $("#second-star").on("click", function(){
                 $("#rating-results").html("4");
+                rate = 4;
             })
             $("#third-star").on("click", function(){
                 $("#rating-results").html("3");
+                rate = 3;
             })
             $("#fourth-star").on("click", function(){
                 $("#rating-results").html("2");
+                rate = 2;
             })
             $("#fifth-star").on("click", function(){
                 $("#rating-results").html("1");
+                rate = 1;
             })
             $('.commentpannel').ready(function(){
                 $(this).find(('.cmt')).each(function(){
                     $(this).find(".first-character1").html($(this).find(".fullname1").text().charAt(0).toUpperCase());
                 })
             })
+            var name;
+            var sdt;
+            var cmt;
+            $('#exampleInputEmail1').change(function(){
+                name = $(this).val();
+                console.log(name);
+            });
+             $('#exampleInputPassword1').change(function(){
+                sdt = $(this).val();
+            });
+             $('#exampleFormControlTextarea1').change(function(){
+                cmt = $(this).val();
+            });
+
+             $('#sub').click(function() {
+                var model = new Object();
+                model.ProductId = @Model.ProductId;
+                model.Rank = name;
+                model.Comment = cmt;
+                model.Rate = rate;
+                console.log(model);
+                jQuery.ajax({
+                type: "POST",
+                url: "@Url.Action("Rate","Products")",
+                dataType: "json",
+                contentType: "application/json; charset=utf-8",
+                data: JSON.stringify( model ),
+                processData: true,
+                cache: false,
+                    });
+              });
         });
     </script>
     <script>
