--- a/wwwroot/css/views/home/index.css
+++ b/wwwroot/css/views/home/index.css
@@ -134,15 +134,15 @@ h4.d-inline{
         box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
         transition: 0.4s ease-in-out;
     }
-.d-inline > button {
-    border: 1px solid #E5E7EB;
+.d-l2 > a {
+    border: 1px solid #E5E7EB !important;
     margin-left: 5px;
     border-radius: 100px;
 }
-    .d-inline > button:hover, .d-inline > button:focus {
+    .d-l2 > a:hover, .d-l2 > a:focus {
         box-shadow: none !important;
         background-color: #be1e2d;
-        color: white;
+        color: white !important;
     }
 .slick-prev, .slick-next {
     background-color: transparent;
