--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -301,23 +301,18 @@
             }
         </div>
     </div>
-    <div class="container banner">
-        <a href="#">
-            <img src="https://hoanghamobile.com/Uploads/2021/11/03/ezgif-com-gif-maker.gif" />
-        </a>
-    </div>
     <div class="/accessories mt-4">
         <div class="mb-3">
             <h4 class="d-inline"><a href="/accessories">PHỤ KIỆN</a></h4>
             <div class="d-l2" style="float: right">
-                <button type="button" class="btn" onclick="window.location.href='#'">AVA</button>
-                <button type="button" class="btn" onclick="window.location.href='#'">Pisen</button>
-                <button type="button" class="btn" onclick="window.location.href='#'">Razer</button>
-                <button type="button" class="btn" onclick="window.location.href='#'">Tenda</button>
-                <button type="button" class="btn" onclick="window.location.href='#'">Xiaomi</button>
-                <button type="button" class="btn" onclick="window.location.href='#'">Anker</button>
-                <button type="button" class="btn" onclick="window.location.href='#'">Aukey</button>
-                <button type="button" class="btn" onclick="window.location.href='#'">Xem tất cả</button>
+               <a class="btn" id="Apple" asp-controller="Products" asp-action="Category" asp-route-id="46">Apple</a>
+               <a class="btn" id="Razer" asp-controller="Products" asp-action="Category" asp-route-id="54">Razer</a>
+               <a class="btn" id="Rapoo" asp-controller="Products" asp-action="Category" asp-route-id="61">Rapoo</a>
+               <a class="btn" id="HyperX" asp-controller="Products" asp-action="Category" asp-route-id="62">HyperX</a>
+               <a class="btn" id="Logitech" asp-controller="Products" asp-action="Category" asp-route-id="63">Logitech</a>
+               <a class="btn" id="Energizer" asp-controller="Products" asp-action="Category" asp-route-id="65">Energizer</a>
+               <a class="btn" id="Xmobile" asp-controller="Products" asp-action="Category" asp-route-id="66">Xmobile</a>
+                <a class="btn" id="Xmobile" asp-controller="Products" asp-action="Accessories" >Xmobile</a>
             </div>
         </div>
 
